--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	},
 
 	"require-dev": {
-		"satooshi/php-coveralls": "^1.0",
+		"php-coveralls/php-coveralls": "^2.0",
 		"phpunit/phpunit": "^5.7|^6.0"
 	}
 }
