--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,14 @@
 
 	"require-dev": {
 		"php-coveralls/php-coveralls": "^2.0",
-		"phpunit/phpunit": "^5.7|^6.0"
+		"phpunit/phpunit": "^5.7|^6.0|^7.0"
+	},
+
+  	"scripts": {
+ 		"phpunit": "phpunit",
+
+    "test": [
+        "@phpunit"
+		]
 	}
 }
