--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,13 @@
 
 	"require": {
 		"pimple/pimple": "^3.0",
-		"ramsey/uuid": "^3.7|^3.8"
+		"ramsey/uuid": "^3.7|^4.0"
 	},
 
 	"require-dev": {
 		"php-coveralls/php-coveralls": "^2.0",
-		"phpunit/phpunit": "^5.7|^6.0|^7.0"
+    "phpunit/phpunit": "^9.0",
+    "phpspec/prophecy-phpunit": "^2.0"
 	},
 
   	"scripts": {
